2006-04-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-operation.h:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-progress.c:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-ssh-operation.c:
    * src/seahorse-generate-adv.c:
    * src/seahorse-generate-druid.c:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-sync.c:
    * src/seahorse-ssh-generate.c:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-upload.c: Simplify and cleanup the 
    operation code
    
2006-04-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-context.c: Fix how 
    seahorse_context_remove_key_source works.
    
2006-04-16  Adam Schreiber  <sadam@clemson.edu>

    * plugins/applet/seahorse-applet.c:
    * src/seahorse-key-manager.c: Make site links in the 
    About dialogs clickable.
    * help/C/seahorse.xml: Update copyright information and 
    document unexposed GConf key. 

2006-04-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-operation.c: Add license
    to seahorse-pgp-operation.c
    
2006-04-15  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-operation.c: Fix compilation 
    problem on x64. Fixes bug #338651
    
2006-04-14  Nate Nielsen  <nielsen@memberwebs.com>

    * INSTALL:
    * README:
    * NEWS: Version 0.9.1
    * Makefile.am:
    * daemon/Makefile.am: Cleanup built files properly
    * configure.in: Update version number to 0.9.2

2006-04-14  Nate Nielsen  <nielsen@memberwebs.com>

    * autogen.sh: Require automake 1.9
    * Makefile.am:
    * configure.in:
    * xmldocs.make (removed):
    * help/Makefile.am:
    * help/seahorse.omf.in (added):
    * help/C/Makefile.am (removed):
    * help/C/seahorse-C.omf (removed):
    * help/C/seahorse.xml: 