@@ -1,5 +1,10 @@
 2006-04-17  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-key-store.c: Fix crasher when 
+    removing keys. 
+    
+2006-04-17  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-hkp-source.c:
     * libseahorse/seahorse-ldap-source.c:
     * libseahorse/seahorse-operation.c:
